# embedded-replica-examples

./: .env  Cargo.toml  README.md  setup.sh
file-based-sync/: test.db
file-based-sync/figures/: libsql-sync.excalidraw
offline-sync/: LICENSE  start-client.sh  start-server.sh  teardown.sh  test.db-shm  test.db-wal  upload-to-client.sh
remote-based-sync/: README.md  bun.lockb  index.ts  package.json  query.ts  validate.ts
remote-sync/: README.md  expire.ts  package.json  query.ts  utils.ts
rust-remote-based-sync/: Cargo.toml
rust-remote-based-sync/src/: main.rs
src/: main.rs
